.. -*- mode: rst -*- vim: ft=rst

.. _cmake-release-notes:

Release Notes
=============

main
----

Sep. 28, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.8.0

* fix opencl detection on cvmfs when no host opencl is installed (#3177)

June 22, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.7.0

* Documentation cleanups
* Remove all references to load_pybindings (#3086)
* Remove BUILD_PYBINDINGS global cmake option. We always build pybindings.
* Add support for cvmfs py3-v4.3.0 (#3098)
* General docs cleanups

Apr. 12, 2023 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.6.0

* "Recalculate" the default install directory with ``make rebuild_cache && make install``
* Minor cleanups

Dec. 12, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.5.0

* Documentation cleanups and improvements, especially for macOS.

Jul. 27, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.4.0

* Drop support for Python 2
* Make photospline optional
* Updates to, and typo fixes for documetation
* Bump minimum cmake version to 3.15
* Build ROOT projects with whatever C++ standard ROOT was built with
* Set C++17 as our standard
* Clean up documentation

Feb. 22, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.3.0

There have been extensive updates to this project, especially in the
documentation that it contains, since the last time these release
notes were updated. Please refer to the git log for points prior to
this release.

* Provide better support for running in virtual enviroments
  the differ from the build environment.
* Disable HDF5 file locking by default.